# pycharm-pytest-issue

./: README.md
my-app/: Makefile  README.md  pyproject.toml  setup.cfg
my-app/my_app/: main.py
my-app/tests/: conftest.py  test_example.py
testing-library/: Makefile  README.md  pyproject.toml  setup.cfg
testing-library/testing_library/: fixtures.py
testing-library/tests/: conftest.py  test_example.py
