[metadata]
name = my-app
version = 0.1.0
url = https://github.com/localstack/my-app
author = LocalStack Contributors
author_email = info@localstack.cloud
description = Some app
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:

install_requires =
    requests>=2.20

[options.extras_require]
dev =
    black>=22.1
    isort>=5.10
    pytest>=7.0

[options.packages.find]
exclude =
    tests*

[options.package_data]
* = *.md
