[metadata]
name = testing-library
version = 0.1.0
url = https://github.com/localstack/testing-library
author = LocalStack Contributors
author_email = info@localstack.cloud
description = My testing library
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
zip_safe = False
packages = find:

install_requires =
    requests>=2.20
    pytest>=7.0

[options.extras_require]
dev =
    black>=22.1
    isort>=5.10

[options.packages.find]
exclude =
    tests*

[options.package_data]
* = *.md
